# odd-odbc-adapter

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: .env  docker-compose.yml
odd_odbc_adapter/: adapter.py  cache.py  config.py  controller.py  scheduler.py  wsgi.py
odd_odbc_adapter/mappers/: columns.py  tables.py  types.py
server/: .env  config.py  wsgi.py
server/adapter/: __init__.py  adapter.py  column.py  table.py  type.py
server/app/: abstract_adapter.py  cache.py  controller.py  oddrn.py  scheduler.py
